# ircfecta

./: ircfecta.cabal
