name:                ircfecta
version:             0.1.0.0
synopsis:            IRC log parser for Haskell
-- description:         
homepage:            https://github.com/CodeBlock/ircfecta
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2014 Ricky Elrod
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4 && < 5
                     , parsers >= 0.12 && < 1
                     , trifecta >= 1.4 && < 2
  hs-source-dirs:      src
  default-language:    Haskell2010
